--- a/index.html
+++ b/index.html
@@ -92,3 +92,37 @@ layout: default
 
   </div>
 </div>
+
+<div class="feature">
+  <h1 class="text-center">Ready to Get Started?</h1>
+
+  <div class="container-fluid">
+    <div class="col-md-6 col-md-offset-3">
+      <ol>
+        <li>
+          Install via pip:
+          {% highlight bash %}
+  pip install slash{% endhighlight %}
+        </li>
+        <li>
+          Write your first test:
+          {% highlight python %}
+def test_something():
+    assert 2 + 2 == 4
+          {% endhighlight %}
+        </li>
+        <li>
+          Run your tests:
+          {% highlight bash %}
+          slash run ./testfile.py
+          {% endhighlight %}
+        </li>
+        <li>
+          Go through the <a href="http://slash.readthedocs.org">documentation</a> to learn more!
+        </li>
+      </ol>
+    </div>
+  </div>
+</div>
+
+
