--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ def test_something():
           {% endhighlight %}
         </li>
         <li>
-          Go through the <a href="http://slash.readthedocs.org">documentation</a> to learn more!
+          There's <strong>A LOT</strong> more to Slash than this! Go through the <a href="http://slash.readthedocs.org">documentation</a> to learn more!
         </li>
       </ol>
     </div>
