--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     {% endfor %}
   </div>
 
-  <img class="logo" src="img/slash-logo.png">
+  <img class="logo" src="img/slash.svg">
   <h1>
     Slash
   </h1>
@@ -23,7 +23,7 @@ layout: default
 
 </div>
 
-<div class="feature dark text-center">
+<div class="container text-center">
   <h1>What is Slash?</h1>
   <p>Slash is a testing framework written in Python, intended for testing large scale projects, especially in integration scenarios.</p>
   <p>
@@ -31,7 +31,7 @@ layout: default
   </p>
 
 </div>
-<div class="featurette container">
+<div class="container featurette-container">
   <div class="row-fluid">
     <div class="col-sm-6">
       <h1>Session Consistency</h1>
@@ -93,7 +93,7 @@ layout: default
   </div>
 </div>
 
-<div class="feature">
+<div class="section dark">
   <h1 class="text-center">Ready to Get Started?</h1>
 
   <div class="container-fluid">
