--- a/backslash/index.html
+++ b/backslash/index.html
@@ -24,7 +24,7 @@ title: Backslash
       <img  src="../../img/backslash-sessions.png">
     </div>
     <div class="col-sm-8">
-      <h3>Track Session Execution -- in one Place</h3>
+      <h3>Track Session Progress and Status</h3>
       <p>Backslash stores automation session information efficiently. It allows you to backtrack execution status - including successful runs, skips, errors and more.
       </p>
       <p>
