--- a/index.html
+++ b/index.html
@@ -22,14 +22,28 @@ layout: default
 
 </div>
 
-<div class="container text-center">
-  <h1>What we do</h1>
+<div class="container">
+  <h1>Who We Are</h1>
   <p>
-    We are software developers having dedicated a large portion of our careers to writing code that tests, stresses and verifies complex software projects, mostly ones involving hardware.</p>
+    We are software developers having dedicated a great deal of time and effort to writing code that tests, stresses and verifies complex software projects, mostly ones involving hardware.</p>
   <p>
     Testing and integrating with such projects requires sophisticated tools and infrastructure in order to get testing done right.</p>
   <p>
     We believe in building robust tools that make such undertakings possible. Tools that make testing complex products suck less.
   </p>
+</div>
+
+<div class="container">
+  <h1>Our Projects</h1>
+  {% for proj in site.data.projects %}
+  <div class="container-fluid">
+    <div class="col-sm-2"><img src="img/{{proj.name}}.svg" style="height: 5em; margin-top: 1.5em"></div>
+    <div class="col-sm-4">
+      <h3>{{proj.name|capitalize}}</h3>
+      <p>{{proj.slug}}</p>
+      <a href="/{{proj.name}}/">Read more...</a>
+    </div>
+  </div>
+  {% endfor %}
 </div>
 
