--- a/scotty/index.html
+++ b/scotty/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-title: Backslash
+title: Scotty - Log Management for the 21st Century
+excerpt: Scotty is a web service allowing you to upload logs and various other artifacts from various locations into a single, centralized place.
+
 ---
 
 <div class="header main scotty">
