--- a/scotty/index.html
+++ b/scotty/index.html
@@ -6,7 +6,7 @@ excerpt: Scotty is a web service allowing you to upload logs and various other a
 ---
 
 <div class="header main scotty">
-  <img class="logo" src="../img/scotty-logo.svg">
+  <img class="logo" src="../img/scotty.svg">
   <h1>Scotty</h1>
   <small>Log Management for the 21st Century</small>
 
