--- a/slash/index.html
+++ b/slash/index.html
@@ -54,7 +54,7 @@ title: Slash
     <div class="col-sm-4 text-center">
       <i class="fa fa-arrows-h fa-5x"></i>
       <h3>Compatible</h3>
-      <img alt="" src="https://img.shields.io/pypi/pyversions/slash.svg"/>
+      <img alt="" src="https://img.shields.io/badge/python-2.6%2C2.7%2C3.3%2C3.4%2C3.5-green.svg"/>
       <p>Real world projects use real-world Python distributions, so we take great care to maintain Python version compatibility, all the way back to 2.6 which is still found on old production distros. We even support pypy!
       </p>
     </div>
@@ -94,8 +94,8 @@ title: Slash
         <li>
           Write your first test:
           {% highlight python %}
-          def test_something():
-      assert 2 + 2 == 4
+def test_something():
+    assert 2 + 2 == 4
           {% endhighlight %}
         </li>
         <li>
