--- a/backslash/index.html
+++ b/backslash/index.html
@@ -10,50 +10,44 @@ title: Backslash
 
 </div>
 
-<div class="overview text-center">
-  <h1>What is Backslash?</h1>
-  <p>
-    Backslash is a centralized test reporting and tracking service. It allows you to keep track of ongoing automated test execution, follow ongoing issues, and get a better estimate of your project's code quality.
-  </p>
-</div>
+<div class="container margin-top">
+  <div class="container-fluid">
 
-
-<div class="container">
-  <div class="container-fluid feature">
-    <div class="col-sm-3 col-sm-offset-1">
-      <img  src="../../img/backslash-sessions.png">
+    <div class="backslash-feature-text">
+      <h3>All Test Results in One Place</h3>
+      <p>Backslash is a test reporting service that keeps track of all test executions, their results and additional details. It enables you to stay on top of the overall testing efforts in your organization, and make sense of it all.</p>
     </div>
-    <div class="col-sm-8">
-      <h3>Track Session Progress and Status</h3>
-      <p>Backslash stores automation session information efficiently. It allows you to backtrack execution status - including successful runs, skips, errors and more.
-      </p>
-      <p>
-      </p>
+
+    <div class="backslash-feature-image">
+      <img src="../img/backslash_screenshot_main_screen.png" class="fit img-thumbnail">
+    </div>
+
+
+  </div>
+  <div class="container-fluid margin-top-big">
+    <div class="backslash-feature-text">
+      <h3>Drill Down with Ease</h3>
+      <p>Backslash saves all the important details about each running session, including custom metadata reported from custom tools.</p>
+    </div>
+
+    <div class="backslash-feature-image">
+      <img src="../img/backslash_screenshot_session_view.png" class="fit img-thumbnail">
     </div>
   </div>
 
-  <div class="container-fluid feature">
-    <div class="col-sm-8 col-sm-offset-1">
-      <h3>Investigate Errors Efficiently</h3>
-      <p>Backslash allows you to take a quick glance at errors, spot non-issues with ease, and drill deep into the root cause of failed tests and sessions.</p>
-      <p>Backslash captures failure and exception tracebacks from code and displays them, allowing you to investigate without leaving your chair.</p>
+  <div class="container-fluid margin-top-big">
+
+
+    <div class="backslash-feature-text">
+      <h3>Error Reporting in Detail</h3>
+      <p>Exceptions and errors in tests are diligently recorded, enabling you to analyze failures quickly and efficiently</p>
+      <p>Backslash also keeps track of warnings emitted from test sessions, emphasizing even the smallest of problems</p>
     </div>
-    <div class="col-sm-3">
-      <img  src="../../img/backslash-error1.png">
+    <div class="backslash-feature-image">
+      <img src="../img/backslash_screenshot_error.png" class="fit img-thumbnail">
     </div>
 
-  </div>
 
-  <div class="container-fluid feature">
-    <div class="col-sm-3 col-sm-offset-1">
-      <img  src="../../img/backslash-activity.png">
-    </div>
-
-    <div class="col-sm-8">
-      <h3>Moderate Results</h3>
-      <p>Stay on top of your regression tests -- sort real issues from false positives. You can archive sessions you decide are not relevant for your testing effort, and you can quickly mark failures as investigated, avoiding unnecessary churn</p>
-      <p>Backslash also allows you to comment on tests and sessions, giving you a place to preserve the information you extract</p>
-    </div>
 
   </div>
 
