--- a/backslash/index.html
+++ b/backslash/index.html
@@ -6,7 +6,7 @@ title: Backslash
 <div class="header main backslash">
   <img class="logo" src="../img/backslash.svg">
   <h1>Backslash</h1>
-  <small>All of Your Test Results, in One Place</small>
+  <small>All Your Test Results, in One Place</small>
 
 </div>
 
